<resources>
    <string name="app_name">ParkingApp</string>
    <string name="action_sign_in_short">Inscription</string>
    <string name="email">Email</string>
    <string name="minimum_password">entrez minimum 6 caracters!</string>
    <string name="auth_failed">Authentification echouée, verifiez votre email ou mot de passe</string>
    <string name="change_email">Changez Email</string>
    <string name="change_password">Changez mot de passe</string>
    <string name="send_password_reset_email">Réinitialisation email ou mot de passe </string>
    <string name="remove_user">suppression utilisateur</string>
    <string name="new_pass">Nouveau mot de passe </string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Se connecter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Votre nom</string>
    <string name="btn_login">se connecter</string>
    <string name="prompt_password">Entrer votre mot de passe </string>
    <string name="btn_link_to_register">Faire une inscription par ici</string>
    <string name="btn_link_to_login">Déjà enregistré. Connectez-moi!</string>
    <string name="title_activity_reset_password">réinitialiser le mot de passe</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="btn_reset_password">réinitialiser le mot de passe</string>
    <string name="btn_back">Retour</string>
    <string name="hint_new_email">nouveau Email</string>
    <string name="btn_change">Changez</string>
    <string name="btn_send">Enovyer</string>
    <string name="btn_remove">Supprimer</string>
    <string name="btn_sign_out">Déconnexion</string>
    <string name="lbl_forgot_password">mot de passe oublié?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="change_password_button">Changez votre mot de passe</string>
    <item name="change_password_button" type="id" />
    <string name="enter_votre_nom">Entrez votre nom</string>
    <string name="enter_votre_grade">Entrez votre grade</string>
    <string name="nomC">Entrer votre nom</string>
    <string name="prenomC">Enter votre prenom</string>
    <string name="postC">Donner votre poste</string>
    <string name="matricule">Entrez votre matricule</string>
    <string name="numtel">Entrez votre numero de telephone</string>
    <string name="Matricule">Entrer votre matricule</string>
    <string name="reserveVoiture">Reserver votre voiture :</string>
    <string name="btn_ajouter">Ajouter</string>
    <string name="nom_voiture">Entrez le nom de voiture</string>
    <string name="txtResp">Connectez vous M.Responsable de Parking</string>
    <string name="txtCadre">Connectez vous M.Employé(e)</string>
    <string-array name="grade">
        <item>Choisir votre grade</item>
        <item>Directeur</item>
        <item>Ingenieur</item>
        <item>Technicien</item>
        <item>Autres</item>
    </string-array>


</resources>
