<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/back"
    android:background="@color/maron"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/sign_out"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerV"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idC"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:layout_marginTop="33dp"
        android:autofillHints=""
        android:hint="@string/Matricule"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/preC"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/prenomC"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idC"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="326dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:entries="@array/grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerV"
        android:layout_width="326dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent"
        android:entries="@array/grade"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nomC"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/nomC"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preC"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="354dp"

        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/numtel"
        android:inputType="number|phone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomC"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:text="@string/reserveVoiture"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>