<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backandroid1"
    tools:context="com.example.parkingv2.SignupActivity">


    <!-- Login Button -->

    <!-- Link to Login Screen -->


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="287dp"
        android:layout_height="185dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription=""
        android:src="@mipmap/gct1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:background="@color/colorAccent"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="32dp"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_password"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,SpUsage" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="162dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
