<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backandroid1"
    tools:context="com.example.parkingv2.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="133dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/newPassword"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/changePass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.372"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useremail"
        tools:ignore="InvalidImeActionId,MissingConstraints" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password_button"
        android:layout_alignStart="@+id/changePass"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="30dp"
        android:text="@string/change_password"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:text="@string/remove_user"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="116dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_user_button" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="UnknownId" />

</androidx.constraintlayout.widget.ConstraintLayout>