<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backandroid1"
            tools:context="com.example.parkingv2.LoginActivity">


            <!-- Login Button -->

            <!-- Link to Login Screen -->


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="287dp"
                android:layout_height="185dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription=""
                android:src="@mipmap/gct1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />


            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_login"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_reset_password"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpUsage" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center|bottom"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="162dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/menu" />

    </FrameLayout>
</LinearLayout>